# market_fastapi

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  script.sh
alembic/: env.py
src/: alembic.ini
src/app/: main.py
src/app/back/: cache.py  mail_back.py  users_back.py
src/app/redis/: config_redis.py  crud_redis.py
src/app/routes/: activate_and_reset.py  auth.py  blog.py  mail.py  main_pages.py  users.py
src/app/routes/back/: auth_back.py  cache.py  mail_back.py
src/celery_mail/: celery_config.py  tasks.py
src/database/: Dockerfile  connection.py  models.py
src/schemas/: articles.py  blog.py  mail.py  models.py  users.py
templates/: Pay&return.html  article.html  articles.html  faq.html  index.html  pay_return.html  styles.css  tariffs.html
templates/auth/: email_sent.html  login.html  recovery.html  registration.html
templates/blog/: article.html  articles.html
templates/macros/: footer.html  header.html
templates/mail/: mail_confirmed.html  mail_sent.html
templates/reg&auth/: login.html  registration.html
templates/users/auth/: login.html
templates/users/recovery/: email_sent.html  new_password.html  recover.html  reset_password.html  reset_password_form.html
templates/users/registration/: mail_confirmed.html  mail_sent.html  register.html
tests/: auth_test.py  blog_test.py  conftest.py  fixtures_data.py  mail_test.py  main_pages_test.py
